chore(deps): bump robolectric to 4.17
Robolectric 4.17 accesses jdk.internal.access on newer JDKs (the CI runner
uses JDK 25), which fails with an IllegalAccessException. Open the package to
the unnamed module for all Test tasks.

Supersedes dependabot PR #2258.